kubernetes/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: gogog-deploy
  name: gogog
spec:
  tls:
    termination: edge
  to:
    kind: ""
    name: gogog-deploy
    weight: null
status: {}
